# RustyCsvViewer

./: .gitignore  Cargo.toml  README.md
rusty_csv_viewer/: Cargo.toml
rusty_csv_viewer/src/: lib.rs  main.rs  resource.rs
rusty_csv_viewer/src/table/: data.rs  mod.rs
rusty_csv_viewer/src/ui/: app.rs  app_ui.rs  component.rs  mod.rs
rusty_csv_viewer/src/ui/dialog/: about.rs
rusty_csv_viewer/src/ui/layout/: data_layout.rs
rusty_csv_viewer/src/ui/menu/: builder.rs  container.rs  mod.rs
rusty_csv_viewer/src/ui/state/: app_state.rs  settings.rs
rusty_csv_viewer/src/utils/: geometry.rs  mod.rs  ui.rs
src/: csv.rs  lib.rs  main.rs  resource.rs  settings.rs  ui.rs
src/csv/: csv_loader.rs  mod.rs  reader.rs
src/table/: mod.rs  reader.rs
src/ui/: app.rs  app_ui.rs  component.rs  event.rs  mod.rs  resource.rs
src/ui/data/: mod.rs
src/ui/layout/: data_layout.rs  mod.rs
src/ui/menu/: builder.rs  container.rs  mod.rs
src/ui/state/: app_state.rs  mod.rs  settings.rs
src/utils/: geometry.rs  macros.rs  mod.rs  ui.rs
winui-lib/: Cargo.toml
winui-lib/src/: lib.rs
winui-lib/src/utils/: d2d.rs  mod.rs
