[package]
name = "rusty_csv_viewer"
version = "0.1.0"
authors = ["Michael Zammit <mzam7159@uni.sydney.edu.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nwg = {version = "^1.0.7", package = "native-windows-gui"}
serde_json = {version = "^1"}
serde = {version = "^1.0", features = ["derive"]}
winapi = {version = "0.3", features = ["winuser"]}
